--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ body{
     color: white;
     font-family: Verdana;
   }
+  p
+  {
+    font-size: 0.5em;
+  }
   /* .slotstatus5{
     margin-top: 20px;
     font-size: 20px;
